// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders Avatars correctly when set src, icon and string 1`] = `
<div>
  <span
    class="ui-avatar ui-avatar-circle ui-avatar-icon ui-avatar-image ui-avatar-string"
  >
    <img
      alt=""
      src="http://img95.699pic.com/element/40044/5588.png_860.png"
    />
  </span>
</div>
`;

exports[`Avatar renders Avatars of different shape correctly 1`] = `
<div>
  <Avatar
    alt=""
    icon=""
    onError={[Function]}
    prefixCls="ui-avatar"
    shape="circle"
    size="circle"
    src=""
  />
  <Avatar
    alt=""
    icon=""
    onError={[Function]}
    prefixCls="ui-avatar"
    shape="circle"
    size="square"
    src=""
  />
</div>
`;

exports[`Avatar renders Avatars of different size correctly 1`] = `
<div>
  <span
    class="ui-avatar ui-avatar-circle"
  />
  <span
    class="ui-avatar ui-avatar-circle"
  />
  <span
    class="ui-avatar ui-avatar-lg ui-avatar-circle"
  />
  <span
    class="ui-avatar ui-avatar-sm ui-avatar-circle"
  />
</div>
`;

exports[`Avatar renders Avatars of different type correctly 1`] = `
<div>
  <span
    class="ui-avatar ui-avatar-circle ui-avatar-icon"
  >
    <i
      class="ui-icon ui-icon-user theme-default"
    />
  </span>
  <span
    class="ui-avatar ui-avatar-circle ui-avatar-string"
  >
    <span
      style="position:absolute;transform:scale(0.9);left:calc(50% - 4.5px )"
    >
      U
    </span>
  </span>
  <span
    class="ui-avatar ui-avatar-circle ui-avatar-string"
  >
    <span
      style="position:absolute;transform:scale(0.6);left:calc(50% - 18px )"
    >
      USER
    </span>
  </span>
  <span
    class="ui-avatar ui-avatar-circle ui-avatar-image"
  >
    <img
      alt="my avatar"
      src="http://img95.699pic.com/element/40044/5588.png_860.png"
    />
  </span>
  <span
    class="ui-avatar ui-avatar-circle ui-avatar-string"
    style="color:#2db7f5;background-color:rgb(249, 232, 8)"
  >
    <span
      style="position:absolute;transform:scale(0.9);left:calc(50% - 4.5px )"
    >
      U
    </span>
  </span>
</div>
`;
